--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -45,5 +45,6 @@
         android:id="@+id/updateFragment"
         android:name="com.propscout.scnotesapp.ui.fragments.notes.update.UpdateFragment"
         android:label="@string/update_notes_text"
-        tools:layout="@layout/update_fragment" />
+        tools:layout="@layout/update_fragment" >
+    </fragment>
 </navigation>
